lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/Linkedin_AP_NC_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to store information about the Auth Provider and Named Credentials for Linked In Manager for each user.</description>
    <label>Linkedin AP NC Setting</label>
    <pluralLabel>Linkedin AP NC Settings</pluralLabel>
</CustomObject>