lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>This field is used to store the client secret for the linked-in client app.</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>