lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/fields/NC_Authenticated__c.field-meta.xml
<CustomField>
    <fullName>NC_Authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NC Authenticated</label>
    <type>Checkbox</type>
</CustomField>