lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/fields/NC_Name__c.field-meta.xml
<CustomField>
    <fullName>NC_Name__c</fullName>
    <label>NC Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>