lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/fields/Share_On_Product__c.field-meta.xml
<CustomField>
    <fullName>Share_On_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Share On Product</label>
    <type>Checkbox</type>
</CustomField>