lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/fields/Sign_In_Product__c.field-meta.xml
<CustomField>
    <fullName>Sign_In_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign In Product</label>
    <type>Checkbox</type>
</CustomField>