lim-project/force-app/main/default/objects/Linkedin_AP_NC_Setting__mdt/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <defaultValue>$User.Id</defaultValue>
    <description>This field stores the user id of the user for which the record is saved.</description>
    <label>User Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>